--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         console.log(1)
         console.log(2)
         console.log('FLAG{HKEHIUENHJKFNKSDJKJSDHNKJASDHKSKH}')
+        let city = "London";
+        let cars = 6000;
+        console.log(city)
 </script>
 
     <h1 onclick="alert('Check console')">0XFXIII <--- click </h1>
